--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,14 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.4.1'
+
+    runtime 'com.h2database:h2'
 }
 
 
